fixed line-height overlapping issue

--- a/static/css/iframe_editor.css
+++ b/static/css/iframe_editor.css
@@ -157,22 +157,22 @@ body.doesWrap {
 
 h1{
   font-size: 30px;
-  line-height: 30px;  
+  line-height: 36px;  
 }
 
 h2{
   font-size: 25px;
-  line-height: 25px;  
+  line-height: 31px;  
 }
 
 h3{
   font-size: 20px;
-  line-height: 20px;  
+  line-height: 25px;  
 }
 
 h4{
   font-size: 15px;
-  line-height: 15px;
+  line-height: 20px;
 }
 
 p {
