--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -141,22 +141,22 @@ a img
 
 .list-title1{
   font-size: 30px;
-  line-height: 30px;  
+  line-height: 36px;  
 }
 
 .list-title2{
   font-size: 25px;
-  line-height: 25px;
+  line-height: 31px;
 }
 
 .list-title3{
   font-size: 20px;
-  line-height: 20px;
+  line-height: 25px;
 }
 
 .list-title4{
   font-size: 15px;
-  line-height: 15px;
+  line-height: 20px;
 }
 
 #users
